// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Airglow Engine should be able to get plugins of a specified type 1`] = `
Array [
  "custom1",
  "custom2",
]
`;

exports[`Airglow Engine should create an engine 1`] = `
Engine {
  "bootstrapped": Object {},
  "registery": Object {},
  "store": Object {
    "dispatch": [Function],
    "getState": [Function],
    "injectReducers": [Function],
  },
}
`;

exports[`Airglow Engine should execute each added feature 1`] = `
Array [
  "rp2A",
  "rp2B",
]
`;

exports[`Airglow Engine should initialize all the plugins 1`] = `
Engine {
  "bootstrapped": Object {},
  "registery": Object {
    "custom": Array [
      Object {
        "callback": [Function],
        "index": 1,
        "type": "custom",
      },
      Object {
        "callback": [Function],
        "index": 2,
        "type": "custom",
      },
    ],
    "template": Array [
      Object {
        "callback": [Function],
        "index": 3,
        "type": "template",
      },
    ],
  },
  "store": Object {
    "dispatch": [Function],
    "getState": [Function],
    "injectReducers": [Function],
  },
}
`;

exports[`Airglow Engine should pass getPlugins function to the store 1`] = `
Array [
  "rp1",
  "rp2A",
  "rp2B",
]
`;

exports[`Airglow Engine should return an empty array if no plugins 1`] = `Array []`;
